Updated files to E03 values

--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -383,3 +383,23 @@ Pos=1,40
 Size=315,91
 Collapsed=1
 
+[E03_Repository - About]
+Pos=1,1
+Size=315,42
+Collapsed=0
+
+[E03_Repository - Main]
+Pos=1,44
+Size=315,107
+Collapsed=0
+
+[E03_Repository - Command]
+Pos=1,152
+Size=315,452
+Collapsed=0
+
+[E03_Repository - Controller]
+Pos=1088,1
+Size=190,641
+Collapsed=0
+
