--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -403,3 +403,18 @@ Pos=1088,1
 Size=190,641
 Collapsed=0
 
+[13_Translation and Scale_d - About]
+Pos=1,1
+Size=340,60
+Collapsed=0
+
+[12_MeshClass_d - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
+
+[E04_Transformations_d - About]
+Pos=1,1
+Size=340,60
+Collapsed=0
+
