--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -155,7 +155,7 @@ Collapsed=0
 
 [E08 - EntityManager_d - About]
 Pos=1,1
-Size=323,305
+Size=316,305
 Collapsed=0
 
 [E08s - EntityManager_d - About]
@@ -411,5 +411,20 @@ Collapsed=0
 [E04 - Transformations - About]
 Pos=1,1
 Size=340,60
+Collapsed=0
+
+[E05 - LERP_d - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
+
+[A02 - 3D Primitives_d - About]
+Pos=1,1
+Size=323,284
+Collapsed=0
+
+[A03 - LERP_d - About]
+Pos=1,1
+Size=32,32
 Collapsed=0
 
